# learn_cpp

./: .gitignore  CMakeLists.txt  Readme.md
demo/: CMakeLists.txt
demo/include/: cppdemangle.h  gtest_prompt.h  hexdump_tool.h  input_password.h  json_parser.h  macro_usage.h  mt_queue.h  ostream.h  prompt.h  random_generation.h  template_SFINAE.h  template_common_type.h  template_compile_for_loop.h  template_compile_reflect.h  template_map_fold.h  template_print.h  template_type_conversion.h  type_erase_msglib.h
demo/src/: code_performance.cpp  dummy_array_iterator.cpp  format_print.cpp  input_password.cpp  json_parser.cpp  macro_usage.cpp  ostream.cpp  random_generation.cpp  template_SFINAE.cpp  template_common_type.cpp  template_compile_for_loop.cpp  template_compile_reflect.cpp  template_print.cpp  template_type_conversion.cpp  value_category.cpp
demo/tests/: CMakeLists.txt
demo/tests/src/: design_pattern.cpp  test_input_password.cpp  test_json_parser.cpp  test_macro_usage.cpp  test_ptr_lifecycle.cpp  test_undef.cpp  value_category.cpp
demo/tools/: clock_info_query.cpp  clock_perf_benchmark.cpp
include/: ScopeProfiler.h  gtest_prompt.h  minilog.h  print.h  prompt.h  scienum.h
projects/calculator/: CMakeLists.txt
projects/calculator/docs/: design.pml
projects/calculator/include/: ast_builder.h  commandParser.h  env.h  exception.h  func_table.h  node.h  parser.h  scanner.h  serial.h  storage.h  symbol_table.h
projects/calculator/src/: ast_builder.cpp  calculator.cpp  commandParser.cpp  env.cpp  exception.cpp  func_table.cpp  node.cpp  parser.cpp  scanner.cpp  storage.cpp  symbol_table.cpp
projects/calculator/tests/src/: test_parser.cpp  test_runtime_state.cpp  test_serial.cpp
projects/perf_duration_trace/: CMakeLists.txt
projects/perf_duration_trace/benchmarks/: perf_duration_trace_benchmark.cpp  perf_duration_trace_disabled_benchmark.cpp
projects/perf_duration_trace/docs/: perf_duration_trace_design.md
projects/perf_duration_trace/include/: perf_duration_trace.h
projects/perf_duration_trace/tests/: perf_duration_trace_analyze_smoke.cpp  perf_duration_trace_disabled_test.cpp  perf_duration_trace_test.cpp  perf_duration_trace_test_site_a.cpp  perf_duration_trace_test_site_b.cpp
projects/perf_duration_trace/tools/: perf_duration_analyze.py
stl/: CMakeLists.txt
stl/include/: Array.h  Functional.h  List.h  Optional.h  UniquePtr.h  Vector.h  _Common.h  _Function.h  _MoveOnlyFunction.h  dummy_array_iterator.h
stl/src/: dummy_array_iterator.cpp
stl/tests/: CMakeLists.txt
stl/tests/src/: test_dummy_array_iterator.cpp  test_function.cpp  test_memory_resource.cpp
test_performance/: CMakeLists.txt
test_performance/include/: ScopeProfiler.h  kernel_map_generate.h
test_performance/src/: backtrace_benchmark.cpp  kernel_map_generate.cpp  string_benchmark.cpp  vector_traverse_performance.cpp
tests/: CMakeLists.txt
tests/test_demo/: CMakeLists.txt
tests/test_demo/src/: api_design.cpp  design_pattern.cpp  hexdump_tool.cpp  test_CRTP.cpp  test_move.cpp  test_ostream.cpp  test_random_generation.cpp  test_template_SFINAE.cpp  test_template_common_type.cpp  test_template_compile_for_loop.cpp  test_template_compile_reflect.cpp  test_template_map_fold.cpp  test_template_print.cpp  test_template_type_conversion.cpp  test_thread.cpp  test_undef.cpp
tests/test_performance/: CMakeLists.txt
tests/test_performance/include/: kernel_map.h
tests/test_performance/src/: CRTP_performance.cpp  kernel_map_benchmark.cpp  kernel_map_val.cpp
tests/test_stl/: CMakeLists.txt
tests/test_stl/src/: test_array.cpp  test_function.cpp  test_list.cpp  test_optional.cpp  test_uniqueptr.cpp  test_vector.cpp
